--- a/JupyBooks/EDA-tgts.ipynb
+++ b/JupyBooks/EDA-tgts.ipynb
@@ -252,7 +252,7 @@
     "ax2.set_title('Number of extinctions in 100 species data', fontweight='bold')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/ext-pie.png', dpi = 300)  # Saves as PNG"
+    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/ext-pie.pdf', dpi = 300)  # Saves as PNG"
    ]
   },
   {
@@ -279,33 +279,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate the fugure\n",
-    "plt.clf()  # Clear the entire figure\n",
+    "# | eval: false\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "\n",
+    "# Clear any previous figures\n",
+    "plt.close('all')\n",
+    "\n",
+    "# Generate the figure\n",
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
     "colors = sns.color_palette('pastel')\n",
     "\n",
-    "# Get histogram data\n",
-    "counts, bins, patches = np.histogram(data20['extinctions'], bins=20)\n",
-    "counts_log = np.log1p(counts)  # log(x+1)\n",
+    "# Plot for data20 - bins from 0 to 20\n",
+    "counts, bins = np.histogram(data20['extinctions'], bins=np.arange(0, 20, 1))  # Explicit bin edges\n",
+    "counts_log = np.log1p(counts)\n",
     "ax1.bar(bins[:-1], counts_log, width=np.diff(bins), edgecolor='black', \n",
-    "        color = colors[0], linewidth=1.5, align='edge')\n",
+    "        color=colors[0], linewidth=1.5, align='center')\n",
     "ax1.set_xlabel('Number of extinctions', fontsize=12, fontweight='bold')\n",
     "ax1.set_ylabel('log(Frequency + 1)', fontsize=12, fontweight='bold')\n",
-    "ax1.set_title('Extinctions with 20 species', fontsize=14, fontweight='bold', pad=15)  # Fixed title\n",
-    "ax1.set_xlim(0, 20)  # Set x-axis limit to 20\n",
+    "ax1.set_title('Extinctions with 20 species', fontsize=14, fontweight='bold', pad=15)\n",
+    "ax1.set_xlim(0, 20)\n",
+    "ax1.set_xticks(np.arange(0, 21, 2))\n",
     "\n",
-    "# Get histogram data\n",
-    "counts, bins, patches = np.histogram(data100['extinctions'], bins=100)\n",
-    "counts_log = np.log1p(counts)  # log(x+1)\n",
+    "# Plot for data100 - bins from 0 to 100\n",
+    "counts, bins = np.histogram(data100['extinctions'], bins=np.arange(0, 100, 1))  # Explicit bin edges\n",
+    "counts_log = np.log1p(counts)\n",
     "ax2.bar(bins[:-1], counts_log, width=np.diff(bins), edgecolor='black', \n",
-    "        color = colors[1], linewidth=1.5, align='edge')\n",
+    "        color=colors[1], linewidth=1.5, align='center')\n",
     "ax2.set_xlabel('Number of extinctions', fontsize=12, fontweight='bold')\n",
     "ax2.set_ylabel('log(Frequency + 1)', fontsize=12, fontweight='bold')\n",
-    "ax2.set_title('Extinctions with 100 species', fontsize=14, fontweight='bold', pad=15)  # Fixed title\n",
-    "ax2.set_xlim(0, 100)  # Set x-axis limit to 100\n",
+    "ax2.set_title('Extinctions with 100 species', fontsize=14, fontweight='bold', pad=15)\n",
+    "ax2.set_xlim(0, 100)\n",
+    "ax2.set_xticks(np.arange(0, 101, 10))  # Optional: adjust tick spacing\n",
     "\n",
+    "# Set x-axis ticks for ax1 to show every 2 units\n",
+    "# ax1.set_xticks(np.arange(0, 20, 2))  # 0, 2, 4, 6, ..., 20\n",
+    "# ax2.set_xticks(np.arange(0, 100, 5))  # 0, 2, 4, 6, ..., 20\n",
     "plt.tight_layout()\n",
-    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/ext-histogram.png', dpi = 300)  # Saves as PNG\n"
+    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/ext-barplot.pdf', dpi = 300)  # Saves as PNG\n"
    ]
   },
   {
@@ -318,7 +331,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "\n",
-    "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/ext-histogram.png')\n",
+    "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/ext-barplot.png')\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.imshow(img)\n",
     "plt.axis('off')\n",
@@ -560,16 +573,10 @@
     "# Create pairplot with only lower triangle\n",
     "plt.clf()  # Clear the entire figure\n",
     "pairplot = sns.pairplot(data20_df[['extinctions', 'bray_curtis', 'keystone', 'relative']], corner=True)\n",
-    "\n",
-    "# Loop through the diagonal axes and set y labels\n",
-    "for ax in pairplot.axes[:, 0]:  # leftmost column\n",
-    "    if ax is not None:\n",
-    "        ax.set_ylabel(ax.get_ylabel(), rotation=0, labelpad=40, fontsize=10)\n",
-    "\n",
-    "pairplot.fig.suptitle('Pairplot for 20 Species', fontsize=16, fontweight='bold', y=0.995)\n",
+    "# pairplot.fig.suptitle('Pairplot for 20 Species', fontsize=16, fontweight='bold', y=0.995)\n",
     "\n",
     "plt.tight_layout()\n",
-    "pairplot.savefig('/mnt/data/sur/users/mrivera/Plots/pairplot_python.png', dpi=300, bbox_inches='tight')\n",
+    "pairplot.savefig('/mnt/data/sur/users/mrivera/Plots/pairplot_poster.pdf', dpi=300, bbox_inches='tight')\n",
     "plt.close()"
    ]
   },
@@ -583,11 +590,110 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "\n",
-    "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/pairplot.png')\n",
+    "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/pairplot_python.png')\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.imshow(img)\n",
     "plt.axis('off')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25cf1246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | eval: false\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Convert to pandas DataFrame if it's not already\n",
+    "data100_df = pd.DataFrame(data100)\n",
+    "cols = ['extinctions', 'bray_curtis', 'keystone', 'relative']\n",
+    "\n",
+    "# Create pairplot with only lower triangle\n",
+    "plt.clf()  # Clear the entire figure\n",
+    "pairplot = sns.pairplot(data100_df[['extinctions', 'bray_curtis', 'keystone', 'relative']], corner=True)\n",
+    "\n",
+    "# Loop through the diagonal axes and set y labels\n",
+    "for ax in pairplot.axes[:, 0]:  # leftmost column\n",
+    "    if ax is not None:\n",
+    "        ax.set_ylabel(ax.get_ylabel(), rotation=0, labelpad=40, fontsize=10)\n",
+    "\n",
+    "pairplot.fig.suptitle('Pairplot for 100 Species', fontsize=16, fontweight='bold', y=0.995)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "pairplot.savefig('/mnt/data/sur/users/mrivera/Plots/pairplot-100specs.png', dpi=300, bbox_inches='tight')\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7277725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | eval: false\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/pairplot-100specs.png')\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.imshow(img)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f36eb001",
+   "metadata": {},
+   "source": [
+    "## Poster result image\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51483a98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | eval: false\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.gridspec as gridspec\n",
+    "\n",
+    "# Clear any previous figures\n",
+    "plt.close('all')\n",
+    "\n",
+    "# Create figure with two subplots\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10, 5) )\n",
+    "\n",
+    "# Load and display images\n",
+    "img1 = plt.imread('/mnt/data/sur/users/mrivera/Plots/pairplot_python.png')\n",
+    "ax1.imshow(img1)\n",
+    "ax1.axis('off')  # Hide axes\n",
+    "\n",
+    "# Plot Barplot with 20 species\n",
+    "colors = sns.color_palette('pastel')\n",
+    "counts, bins = np.histogram(data20['extinctions'], bins=np.arange(0, 20, 1))  # Explicit bin edges\n",
+    "counts_log = np.log1p(counts)\n",
+    "ax2.bar(bins[:-1], counts_log, width=np.diff(bins), edgecolor='black', \n",
+    "        color=colors[0], linewidth=1.5, align='center')\n",
+    "ax2.set_xlabel('Number of extinctions', fontsize=12, fontweight='bold')\n",
+    "ax2.set_ylabel('log(Frequency + 1)', fontsize=12, fontweight='bold')\n",
+    "ax2.set_title('Extinctions with 20 species', fontsize=14, fontweight='bold', pad=15)\n",
+    "ax2.set_xlim(0, 20)\n",
+    "ax2.set_xticks(np.arange(0, 21, 2))\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/combined-poster.pdf', dpi=300)\n"
    ]
   }
  ],
