Added plots to exploratory data analysis of control group

--- a/JupyBooks/EDA-controls.ipynb
+++ b/JupyBooks/EDA-controls.ipynb
@@ -33,6 +33,7 @@
     "EXP_DIR = '/mnt/data/sur/users/mrivera/Controls/C0-exp_20251102'\n",
     "TGT_DIR = os.path.join(EXP_DIR, \"GNN-targets\")\n",
     "RAW_DIR = os.path.join(EXP_DIR, \"raw-ODEs\")\n",
+    "POST_DIR = os.path.join(EXP_DIR, \"Post-exts\")\n",
     "\n",
     "#  Load-data\n",
     "data = pd.read_csv('/mnt/data/sur/users/mrivera/Controls/C0-exp_20251102/Simultation-parameters.tsv', sep=\"\\t\")\n",
@@ -57,26 +58,29 @@
     "\n",
     "id = ids_vector[0]\n",
     "sk = data.loc[0, 'keys']\n",
-    "row = rows[0]\n",
+    "#row = rows[0]\n",
     "\n",
     "def read_data(row):\n",
     "    id = row['id']\n",
-    "    sk = row['keys']\n",
+    "    sk = row['keys'] \n",
+    "    sk_idx = sk - 1             # Convert to zero-indexed\n",
     "    # Load target metrics\n",
     "    x = ft.read_table(os.path.join(TGT_DIR, f'tgt_{id}.feather'), columns=['new_ext', 'BC_diss', 'K_s'] )\n",
     "    # Convert to numpy \n",
     "    ext = x['new_ext'].to_numpy()\n",
     "    Bc = x['BC_diss'].to_numpy().round(5) \n",
     "    Ks = np.round(x['K_s'].to_numpy(), 5)\n",
-    "    # Load relative frequency - read only last column\n",
+    "    # Section: Load relative frequency BEFORE perturbation\n",
     "    y = ft.read_table(os.path.join(RAW_DIR, f'O_{id}.feather'))\n",
     "    freq = y.column(-1).to_numpy()\n",
-    "    # Extract keystone values \n",
-    "    sk_idx = sk - 1  \n",
-    "    # Vectorized relative frequency calculation\n",
     "    freq_sum = freq.sum()\n",
-    "    key_rel = freq[sk_idx] / freq_sum if freq_sum != 0 else freq * 0  # Faster than zeros_like\n",
-    "    # Extract keystone values\n",
+    "    key_Brel = freq[sk_idx] / freq_sum if freq_sum != 0 else freq * 0  # Faster than zeros_like \n",
+    "    # Section: Load relative frequency AFTER perturbation\n",
+    "    y = ft.read_table(os.path.join(POST_DIR, f'E_{id}-S{sk}.feather'))\n",
+    "    freq = y.column(-1).to_numpy()\n",
+    "    freq_sum = freq.sum()\n",
+    "    key_Arel = freq[sk_idx] / freq_sum if freq_sum != 0 else freq * 0  # Faster than zeros_like \n",
+    "    # Section: Extract keystone values\n",
     "    key_ext = ext[sk_idx]\n",
     "    key_bc = Bc[sk_idx]\n",
     "    key_ks = Ks[sk_idx]\n",
@@ -84,17 +88,14 @@
     "    ext = np.delete(ext, sk_idx)\n",
     "    Bc = np.delete(Bc, sk_idx)\n",
     "    Ks = np.delete(Ks, sk_idx)\n",
-    "    return ext, Bc, Ks, key_rel, key_ext, key_ks, key_bc\n",
+    "    return ext, Bc, Ks, key_Brel, key_Arel, key_ext, key_ks, key_bc\n",
     "\n",
     "rows = [row for _, row in data.iterrows()]\n",
-    "\n",
-    "# testing\n",
-    "# ext, Bc, Ks, rel, key_ext, key_ks, key_bc = read_data(rows[10])\n",
     "\n",
     "with ProcessPoolExecutor() as ex:           # uses all cores automatically\n",
     "   results  = list(ex.map(read_data, rows))\n",
     "\n",
-    "ext, Bc, Ks, key_rel, key_ext, key_ks, key_bc = map(list, zip(*results))\n",
+    "ext, Bc, Ks, key_Brel, key_Arel, key_ext, key_ks, key_bc = map(list, zip(*results))\n",
     "other_ext = np.concatenate(ext)\n",
     "other_bc  = np.concatenate(Bc)\n",
     "other_ks  = np.concatenate(Ks)\n",
@@ -111,8 +112,43 @@
     "    'extinctions': key_ext,\n",
     "    'BrayCurtis': key_bc,\n",
     "    'keystone': key_ks,\n",
-    "    'relative': key_rel\n",
+    "    'Before-rel': key_Brel,\n",
+    "    'After-rel': key_Arel,\n",
     "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e075886",
+   "metadata": {},
+   "source": [
+    "## Testing order of parallelization\n",
+    "\n",
+    "I think the issue may come from how the data is returned, so I’ll make a dummy function to check if the order changes.\n",
+    "\n",
+    "*conclusion:* `ProcessPoolExecutor()` returns data in order; it doesn’t change it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e8995a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from concurrent.futures import ProcessPoolExecutor\n",
+    "\n",
+    "def dummy(x,y, z):\n",
+    "    return x*x, y*y, z\n",
+    "\n",
+    "x = [1,2,3,4]\n",
+    "y = [10,20,30,40]\n",
+    "z = ['a','b','c','d']\n",
+    "\n",
+    "with ProcessPoolExecutor() as ex:           # uses all cores automatically\n",
+    "   results  = list(ex.map(dummy, x, y, z))\n",
+    "\n",
+    "print(results)"
    ]
   },
   {
@@ -170,6 +206,66 @@
     "plt.imshow(img)\n",
     "plt.axis('off')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "101113c1",
+   "metadata": {},
+   "source": [
+    "## Scatter Plot relative frequency before vs after perturbation\n",
+    "\n",
+    "I want to examine the growth of my keystone species in the community before perturbation and after perturbation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d32fe4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# | eval: false\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Assuming you have your data\n",
+    "before = key_data['Before-rel'] \n",
+    "after = key_data['After-rel'] \n",
+    "\n",
+    "# Create x-coordinates: 1 for first 29, 2 for next 29, etc.\n",
+    "x_coords = [n for n in range(1, 1001)]\n",
+    "\n",
+    "plt.clf()\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "# Draw points\n",
+    "plt.scatter(x_coords, before, alpha=0.6, s=50, color='blue', label='Before')\n",
+    "plt.scatter(x_coords, after, alpha=0.6, s=50, color='red', label='After')\n",
+    "\n",
+    "# Labels\n",
+    "plt.xlabel('Community', fontsize=12, fontweight='bold')\n",
+    "plt.ylabel('Relative-freq', fontsize=12, fontweight='bold')\n",
+    "plt.title('Keystone specie relative frequency', fontsize=16, fontweight='bold')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.legend(loc='upper right', frameon=True, shadow=True, fontsize=12, title='Species Type', title_fontsize=12)\n",
+    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/keystone_relative.png', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc503d07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "before = np.array(key_data['Before-rel'])\n",
+    "after = np.array(key_data['After-rel'])\n",
+    "\n",
+    "result = before - after\n",
+    "print(result)   # [-3  1  3]"
    ]
   },
   {
