Added max keystone values for sanity check in our GraphConv model

--- a/JupyBooks/EDA-controls.ipynb
+++ b/JupyBooks/EDA-controls.ipynb
@@ -30,15 +30,56 @@
     "import os\n",
     "\n",
     "# Section: Generate-paths\n",
-    "EXP_DIR = '/mnt/data/sur/users/mrivera/Controls/C0-exp_20251102'\n",
+    "EXP_DIR = '/mnt/data/sur/users/mrivera/Controls/exp_20251125'\n",
     "TGT_DIR = os.path.join(EXP_DIR, \"GNN-targets\")\n",
     "RAW_DIR = os.path.join(EXP_DIR, \"raw-ODEs\")\n",
-    "POST_DIR = os.path.join(EXP_DIR, \"Post-exts\")\n",
+    "POST_DIR = os.path.join(EXP_DIR, \"Post-exts\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d908d783",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | eval: false\n",
+    "\n",
+    "import pyarrow.feather as ft\n",
+    "import numpy as np\n",
+    "\n",
+    "from concurrent.futures import ProcessPoolExecutor\n",
+    "from multiprocessing import Pool\n",
+    "\n",
+    "def read_data(row):\n",
+    "    id = row[\"id\"]\n",
+    "    sk = row[\"keys\"]\n",
+    "    sk_idx = sk - 1             # Convert to zero-indexed\n",
+    "    # Load target metrics\n",
+    "    x = ft.read_table(os.path.join(TGT_DIR, f'tgt_{id}.feather'), columns=['new_ext', 'BC_diss', 'K_s'] )\n",
+    "    # Convert to dataframe\n",
+    "    df = x.to_pandas() \n",
+    "    df['BC_diss'] = df['BC_diss'].round(5)\n",
+    "    df['K_s'] = df['K_s'].round(5)\n",
+    "    # Section: Load relative frequency BEFORE perturbation\n",
+    "    y = ft.read_table(os.path.join(RAW_DIR, f'O_{id}.feather'))\n",
+    "    freq = y.column(-1).to_numpy()\n",
+    "    freq_sum = freq.sum()\n",
+    "    df['rel_freq'] = freq / freq_sum if freq_sum != 0 else freq * 0  \n",
+    "    # Section: Add labels\n",
+    "    labels = [\"other\"] * 30\n",
+    "    labels[sk_idx] = \"key\"\n",
+    "    df['label'] = labels\n",
+    "    return df\n",
     "\n",
     "#  Load-data\n",
-    "data = pd.read_csv('/mnt/data/sur/users/mrivera/Controls/C0-exp_20251102/Simultation-parameters.tsv', sep=\"\\t\")\n",
-    "ids_vector = data.loc[:, 'id']\n",
-    "key_vector = data.loc[:, 'keys']"
+    "data = pd.read_csv(f'{EXP_DIR}/Simulation-parameters.tsv', sep=\"\\t\")\n",
+    "rows = [row for _, row in data.iterrows()]\n",
+    "\n",
+    "with ProcessPoolExecutor() as ex:           # uses all cores automatically\n",
+    "   results  = list(ex.map(read_data, rows))\n",
+    "\n",
+    "combined = pd.concat(results, ignore_index=True)\n"
    ]
   },
   {
@@ -299,7 +340,18 @@
     "\n",
     "# Keystone data\n",
     "ct, bin = gen_counts(key_data['extinctions'])\n",
-    "ax1.bar(bin[:-1], height=ct, width=0.5, align='center', label='Keystone', color='red')\n",
+    "ax1.bar(bin[:-1],  height=ct, width=0.5, align='center', label='Others', color='blue')\n",
+    "ax2.legend(loc='upper right')  # Add legend to first subplot\n",
+    "\n",
+    "# Optional: Add labels\n",
+    "ax1.set_ylabel('log-freq')\n",
+    "ax2.set_ylabel('log-freq')\n",
+    "\n",
+    "ax1.set_xlabel('# of extinctions')\n",
+    "ax2.set_xlabel('# of extinctions')\n",
+    "fig.suptitle('Control data EDA', fontsize=14)\n",
+    "\n",
+    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/boxplots-controls.png', format='png')height=ct, width=0.5, align='center', label='Keystone', color='red')\n",
     "ax1.legend(loc='upper right')  # Add legend to first subplot\n",
     "\n",
     "# Other species counts\n",
