Fixed code and get maximum values in my script

--- a/GNN/architectures/GraphConv.ipynb
+++ b/GNN/architectures/GraphConv.ipynb
@@ -124,9 +124,9 @@
     "seed_fn(38)\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "model = simple_gnn_gcn(hidden_channels=60).to(device)\n",
-    "loss_fn = nn.MSELoss()                                                # Loss function for regression\n",
+    "loss_fn = nn.MSELoss()                                                # Loss function \n",
     "optimizer = optim.Adam(model.parameters(), lr=0.01) \n",
-    "xtr, ytr, loss_train = training_loop(model, train_files, loss_fn, optimizer, epochs=1000)\n",
+    "xtr, ytr, loss_train = training_loop(model, train_files, loss_fn, optimizer, epochs=200)\n",
     "\n",
     "\n"
    ]
@@ -136,7 +136,9 @@
    "id": "819c9b83",
    "metadata": {},
    "source": [
-    "## Plot loss over epochs"
+    "## Plot loss over epochs\n",
+    "\n",
+    "We plot loss over epochs to observe if the model is learning something and how is it performing."
    ]
   },
   {
@@ -145,7 +147,31 @@
    "id": "66ea5745",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "def loss_plotter(loss_epochs = None, epochs = None):\n",
+    "    # After collecting your data\n",
+    "    y = np.round(loss_epochs, 3)\n",
+    "    x = list(range(0, epochs))\n",
+    "    # Create scatter plot\n",
+    "    fig = plt.figure(figsize=(8, 8))\n",
+    "    plt.plot(x, y, alpha=0.5)\n",
+    "    # Add perfect prediction line (y=x)\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.ylabel('Loss')\n",
+    "    plt.title('Loss over epochs')\n",
+    "    plt.grid(True, alpha=0.3)\n",
+    "    plt.tight_layout()\n",
+    "    ymin = min(y) \n",
+    "    plt.ylim(ymin, max(y))\n",
+    "    plt.xlim(0, max(x))\n",
+    "    return fig\n",
+    "\n",
+    "fig = loss_plotter(loss_train, epochs = 200)\n",
+    "fig.savefig('/home/mriveraceron/glv-research/plots/ToyData-loss.png', dpi=150, bbox_inches='tight')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +188,10 @@
    "source": [
     "## Maximum keystoness for each community vs prediction\n",
     "\n",
-    "This validation process evaluates the performance of a previously trained model by measuring its ability to predict maximum y values across different communities. The validation metric is expressed as a percentage accuracy."
+    "This validation process evaluates the performance of a previously trained model by measuring its ability to predict maximum y values across different communities. The validation metric is expressed as a percentage accuracy.\n",
+    "\n",
+    "## Function used:\n",
+    "+ Scatter: https://pytorch-scatter.readthedocs.io/en/latest/functions/scatter.html"
    ]
   },
   {
@@ -172,16 +201,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from torch_geometric.utils import scatter\n",
+    "\n",
     "# Get validation files\n",
     "valid_files = glob.glob(f'{directory}/ValBatch_*.pt')\n",
+    "\n",
     "\n",
     "def validation_fn(model, files, loss_fn, device):\n",
     "    model.eval()  # Set to evaluation mode\n",
     "    total_loss = 0\n",
+    "    total_graphs = 0\n",
     "    true_max, predicted_max = [], []\n",
     "    with torch.no_grad():  # Disable gradient computation\n",
     "        for path in files:\n",
     "            data_list = torch.load(path, weights_only=False)                            # Load data\n",
+    "            total_graphs += len(data_list)                                              # Count total graphs\n",
     "            true_max.extend( [round(data.y.max().item(), 5) for data in data_list] )    # True max per sample\n",
     "            loader = DataLoader(data_list, batch_size=50, shuffle=False)                # Batch data   \n",
     "            for batch in loader:\n",
@@ -190,27 +224,33 @@
     "                out = model(data)\n",
     "                loss = loss_fn(out, data.y)\n",
     "                total_loss += loss.item()\n",
-    "                max_values = out.max(dim=1)[0].detach().cpu().tolist()   # Predicted max per sample\n",
-    "                predicted_max.extend([round(x, 5) for x in max_values])\n",
-    "                print(f\"Graphs per batch: {batch.num_graphs}\")\n",
-    "                print(f\"Total nodes in batch: {batch.num_nodes}\")   # x are the nodes\n",
-    "                print(f\"x (nodes) shape: {batch.x.shape}\")\n",
-    "                print(f\"y shape: {batch.y.shape}\")\n",
-    "                print(f\"batch vector: {batch.batch}\")\n",
-    "                print(f'Shape of max outs {out.max(dim=1)[0].shape}')\n",
+    "                # Get max value per graph in the batch\n",
+    "                max_values = scatter(out, batch.batch, dim=0, reduce='max')  # [50, 1] \n",
+    "                max_values = max_values.squeeze()  # Remove the extra dimension: [50] \n",
+    "                predicted_max.extend([round(x, 5) for x in max_values.detach().cpu().tolist()])\n",
+    "                print(f'Shape of predicted max {len(predicted_max)}')\n",
+    "                # print(f\"Graphs per batch: {batch.num_graphs}\")\n",
+    "                # print(f\"Total nodes in batch: {batch.num_nodes}\")   # x are the nodes\n",
+    "                # print(f\"x (nodes) shape: {batch.x.shape}\")\n",
+    "                # print(f\"y shape: {batch.y.shape}\")\n",
+    "                # print(f\"batch vector: {batch.batch}\")\n",
     "                print(\"---\")\n",
-    "    return true_max, predicted_max, total_loss\n",
+    "    return true_max, predicted_max, total_loss, total_graphs\n",
     "\n",
     "# How zip works\n",
     "# a = [0.5, 0.80, 1.20]\n",
     "# b = [0, 0.60, 0.80]\n",
     "# x = [a - b for a, b in zip(a, b)]\n",
     "\n",
-    "true_max, predicted_max, total_loss = validation_fn(model, valid_files, loss_fn, device)\n",
-    "diff = [a - b for a, b in zip(true_max, predicted_max)]\n",
-    " \n",
-    "    \n",
-    "    \n"
+    "true_max, predicted_max, total_loss, total_graphs = validation_fn(model, valid_files, loss_fn, device)\n",
+    "\n",
+    "if len(true_max) == len(predicted_max):\n",
+    "    print(\">> Lengths match predicted and true values.\")\n",
+    "    diff = np.abs(np.array(true_max) - np.array(predicted_max))\n",
+    "    correct = np.sum(diff <= 0.01)\n",
+    "    total = len(true_max)\n",
+    "    accuracy = (correct / total) * 100\n",
+    "    print(f\"The accuracy of the model to predict the max value is: {accuracy} %\")\n"
    ]
   },
   {
@@ -352,7 +392,7 @@
     "\n",
     "The following code demonstrates how to get the maximum value of the y tensor for each individual sample (graph) when using DataLoader for batching in PyTorch Geometric.\n",
     "\n",
-    "## Problem\n",
+    "## Problem 1\n",
     "When graphs are batched together using DataLoader, all node features and labels are concatenated. The `batch` vector indicates which nodes belong to which graph, but we need to extract the maximum y value for each original graph separately."
    ]
   },
@@ -404,6 +444,28 @@
     "x = torch.tensor([1, 2, 3, 4])\n",
     "x.size()\n",
     "torch.unsqueeze(x, -1).size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a512879",
+   "metadata": {},
+   "source": [
+    "## Problem 2\n",
+    "\n",
+    "When batching graphs, all node features and targets are concatenated into a single large tensor. To aggregate node-level predictions back to graph-level predictions, we use the `scatter` function, which groups nodes by their graph assignment using the `batch.batch` vector."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96112a39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = torch.tensor([0, 1, 0, 2, 1, 2])\n",
+    "data = torch.tensor([10, 20, 30, 40, 50, 60])\n",
+    "scatter(data, index, dim=0, reduce='max')  # Should be [30, 50, 60]"
    ]
   },
   {
@@ -462,47 +524,6 @@
     "    return results\n",
     "\n",
     "tmp = test_seeds(nseeds=5)      \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f5aaeda",
-   "metadata": {},
-   "source": [
-    "## Plotting\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b33a49a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Section: Plotting\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "def loss_plotter(loss_epochs = None, epochs = None):\n",
-    "    # After collecting your data\n",
-    "    y = np.round(loss_epochs, 3)\n",
-    "    x = list(range(0, epochs))\n",
-    "    # Create scatter plot\n",
-    "    fig = plt.figure(figsize=(8, 8))\n",
-    "    plt.plot(x, y, alpha=0.5)\n",
-    "    # Add perfect prediction line (y=x)\n",
-    "    plt.xlabel('Epochs')\n",
-    "    plt.ylabel('Loss')\n",
-    "    plt.title('Loss over epochs')\n",
-    "    plt.grid(True, alpha=0.3)\n",
-    "    plt.tight_layout()\n",
-    "    ymin = min(y) \n",
-    "    plt.ylim(ymin, max(y))\n",
-    "    plt.xlim(0, max(x))\n",
-    "    return fig\n",
-    "\n",
-    "fig = loss_plotter(loss_epochs, epochs)\n",
-    "fig.savefig('/mnt/data/sur/users/mrivera/Plots/4379fd40-9f0a-loss.png', dpi=150, bbox_inches='tight')"
    ]
   },
   {
